# OmegaStrain-Reimplementation

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  Open-OpenOmega-VS.cmd  Play-OpenOmega.cmd  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  research.yml
.github/workflows/: native-ci.yml
analysis/elf/: SCUS_97264.metadata.json  argument-loader.md  loader-hints.md
analysis/evidence/: ledger.jsonl
analysis/fixtures/frontend_phase_v1/: synthetic-producer.hex
analysis/fixtures/frontend_phase_v2/: synthetic-contract.txt  synthetic-producer.hex
analysis/formats/: ASSET-RECON.md  COL.md  DECODER-COVERAGE.md  FRONTEND-ENVELOPE-COVERAGE.md  FRONTEND-EVIDENCE-AUDIT.md  FRONTEND-PHASE.md  FRONTEND-TOPOLOGY.md  HOG.md  LPD.md  MEMBER-STRUCTURAL-FINGERPRINT.md  PAR.md  POP.md  SCENE-FRAGMENT.md  SKAS.md  SO.md  TDX.md  VAG.md  VPK.md  VUM.md  asset-fingerprints.json  hog-headers.jsonl  hog-summary.json  hog-validation.json  minsk-scripts-hog.json  so-validation.json
analysis/formats/dossiers/: 64.md  BD.md  (+47 more)
analysis/manifests/: disc-files.jsonl  disc-summary.json
analysis/tooling/: ReSymbol.md
cmake/: OmegaVisualStudio.cmake  openomega_capture_cli_smoke.cmake  openomega_capture_replay_cli_smoke.cmake  openomega_process_contract.cmake  openomega_windows_package_contract.cmake
debugger/: OpenOmega.natvis
docs/: 00-Session-Handoff.md  01-Clean-Room-Method.md  02-Runtime-Architecture.md  03-Milestones.md  04-Legal-and-Takedown-Readiness.md  04-Native-Persistence.md  05-Frontend-Trace-Contract.md  06-Asset-Decoding-Handoff.md  07-Engine-and-SDK-Roadmap.md  08-Retail-Front-End-Presentation-Scope.md  DEBUGGING.md  campaign-ledger-20260720.md
docs/adr/: 0001-pure-native-runtime.md  0002-sdl3-platform-layer.md  0003-native-opening-movie-boundary.md  0004-compatibility-first-engine-sdk.md  0005-project-diagnostic-scene-ir.md  0006-sdl-indexed-mesh-host.md  0007-canonical-level-scene-composition.md  0007-project-owned-model-pose-ir.md  0008-project-owned-model-pose-ir.md  0009-read-only-iso9660-game-data-source.md  0010-native-prelaunch-process-boundary.md  0011-retail-derived-player-presentation.md  0012-bounded-screen-space-triangle-kernel.md
docs/native-scaffolds/: README.md  bnk_container_descriptor.h  bon_container_descriptor.h  fnt_container_descriptor.h  gui_container_descriptor.h  gun_container_descriptor.h  ie_container_descriptor.h  prn_container_descriptor.h  pss_container_descriptor.h  scc_container_descriptor.h  skel_container_descriptor.h  skf_container_descriptor.h  sub_container_descriptor.h  txt_container_descriptor.h
native/tests/: asset_service_tests.cpp  boot_sequence_tests.cpp  canonical_level_render_pages_tests.cpp  canonical_level_scene_materials_tests.cpp  canonical_level_scene_tests.cpp  character_catalog_tests.cpp  character_front_end_flow_tests.cpp  col_spatial_mesh_decoder_tests.cpp  component_store_tests.cpp  config_service_tests.cpp  container_descriptor_tests.cpp  debug_locomotion_tests.cpp  debug_subsystem_entry_break_simulation_host.cpp  diagnostic_actor_marker_tests.cpp  diagnostic_actor_scene_tests.cpp  diagnostic_menu_tests.cpp  diagnostic_mission_lifecycle_tests.cpp  diagnostic_proximity_trigger_tests.cpp  diagnostic_target_fire_tests.cpp  entity_registry_tests.cpp  fnt_envelope_descriptor_tests.cpp  fnt_v3_decoder_tests.cpp  frame_scheduler_tests.cpp  front_end_presentation_gate_tests.cpp  front_end_screen_bundle_tests.cpp  front_end_tests.cpp  frontend_compositor_math_tests.cpp  frontend_cpu_raster_tests.cpp  frontend_document_decoder_tests.cpp  frontend_envelope_commands_tests.cpp  frontend_phase_wire_contract_tests.cpp  frontend_presentation_tests.cpp  frontend_tdx_decoder_tests.cpp  frontend_text_layout_tests.cpp  frontend_texture_sampler_tests.cpp  frontend_timeline_tests.cpp  game_data_service_tests.cpp  gui_envelope_descriptor_tests.cpp  hog_archive_tests.cpp  ie_envelope_descriptor_tests.cpp  (+86 more)
packaging/windows/: README-WINDOWS.md  launch-openomega.cmd
scripts/: launch-omega.ps1  run-openomega-launcher.ps1  run-openomega.ps1  windows-command-line.ps1
scripts/tests/: test-launch-omega-quoting.ps1
tools/: analyze_frontend_trace.py  assemble_frontend_phase.py  assemble_scene_fragment.py  check_dco.py  check_evidence_ledger.py  check_ledger_format.py  check_native_dependencies.py  check_public_tree.py  fingerprint_assets.py  fingerprint_hogs.py  generate_manifest.py  hog.py  inspect_ps2_elf.py  inspect_so.py  measure_frontend_hog_topology.py  measure_level_material_texture_name_candidates.py  measure_level_tdx_topology.py  measure_level_texture_container_topology.py  measure_member_structural_fingerprint.py  mips_static_refs.py  probe_native_levels.py  profile_pop_candidate_record_shapes.py  prove_tdx_zero_suffix.py  scan_pop_post_terrain.py  score_pop_section_layout_hypotheses.py  score_tdx_layout_hypotheses.py  trace_startup_loader.py  validate_frontend_trace.py  validate_hogs.py  validate_vum_read_trace.py  vum_material_catalog_contract.py
tools/tests/: test_analyze_frontend_trace.py  test_assemble_frontend_phase.py  test_assemble_scene_fragment.py  test_check_dco.py  test_check_evidence_ledger.py  test_check_ledger_format.py  test_check_native_dependencies.py  test_check_public_tree.py  test_ci_timeout_contract.py  test_decoder_coverage_contract.py  test_fingerprint_assets.py  test_format_dossier_contract.py  test_generate_manifest.py  test_measure_frontend_hog_topology.py  test_measure_level_material_texture_name_candidates.py  test_measure_level_tdx_topology.py  test_measure_level_texture_container_topology.py  test_measure_member_structural_fingerprint.py  test_probe_native_levels.py  test_profile_pop_candidate_record_shapes.py  test_prove_tdx_zero_suffix.py  test_scan_pop_post_terrain.py  test_score_pop_section_layout_hypotheses.py  test_score_tdx_layout_hypotheses.py  test_subsystem_entry_break_policy.py  test_validate_frontend_trace.py  test_validate_vum_read_trace.py
(+275 files in other folders)
